--- a/QuanLyCTCN/Views/DanhMuc/Delete.cshtml
+++ b/QuanLyCTCN/Views/DanhMuc/Delete.cshtml
@@ -1,7 +1,7 @@
-@model QuanLyCTCN.Models.ChiTieu
+@model QuanLyCTCN.Models.DanhMuc
 
 @{
-    ViewData["Title"] = "Xóa chi tiêu";
+    ViewData["Title"] = "Xóa danh mục";
     Layout = "_AdminLayout";
 }
 
@@ -10,30 +10,30 @@
         <div class="col-12">
             <div class="card mb-4">
                 <div class="card-header pb-0">
-                    <h6>Xóa chi tiêu</h6>
+                    <h6>Xóa danh mục</h6>
                 </div>
                 <div class="card-body">
-                    <h3>Bạn có chắc chắn muốn xóa chi tiêu này?</h3>
+                    <h3>Bạn có chắc chắn muốn xóa danh mục này?</h3>
                     <div>
                         <hr />
                         <dl class="row">
                             <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.NgayChi)
+                                @Html.DisplayNameFor(model => model.TenDanhMuc)
                             </dt>
                             <dd class="col-sm-10">
-                                @Html.DisplayFor(model => model.NgayChi)
+                                @Html.DisplayFor(model => model.TenDanhMuc)
                             </dd>
                             <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.DanhMuc)
+                                @Html.DisplayNameFor(model => model.Loai)
                             </dt>
                             <dd class="col-sm-10">
-                                @(Model.DanhMuc?.TenDanhMuc ?? "N/A")
+                                @Html.DisplayFor(model => model.Loai)
                             </dd>
                             <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.SoTien)
+                                @Html.DisplayNameFor(model => model.Nhom)
                             </dt>
                             <dd class="col-sm-10">
-                                @Html.DisplayFor(model => model.SoTien)
+                                @Html.DisplayFor(model => model.Nhom)
                             </dd>
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.GhiChu)
@@ -44,7 +44,7 @@
                         </dl>
                         
                         <form asp-action="Delete" method="post">
-                            <input type="hidden" asp-for="ChiTieuId" />
+                            <input type="hidden" asp-for="DanhMucId" />
                             <input type="submit" value="Xóa" class="btn btn-danger" /> |
                             <a asp-action="Index" class="btn btn-secondary">Quay lại danh sách</a>
                         </form>
