--- a/QuanLyCTCN/Views/ThuNhap/Details.cshtml
+++ b/QuanLyCTCN/Views/ThuNhap/Details.cshtml
@@ -1,7 +1,7 @@
-@model QuanLyCTCN.Models.ChiTieu
+@model QuanLyCTCN.Models.ThuNhap
 
 @{
-    ViewData["Title"] = "Chi tiết chi tiêu";
+    ViewData["Title"] = "Chi tiết thu nhập";
     Layout = "_AdminLayout";
 }
 
@@ -10,15 +10,15 @@
         <div class="col-12">
             <div class="card mb-4">
                 <div class="card-header pb-0">
-                    <h6>Chi tiết chi tiêu</h6>
+                    <h6>Chi tiết thu nhập</h6>
                 </div>
                 <div class="card-body">
                     <dl class="row">
                         <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.NgayChi)
+                            @Html.DisplayNameFor(model => model.NgayNhap)
                         </dt>
                         <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.NgayChi)
+                            @Html.DisplayFor(model => model.NgayNhap)
                         </dd>
                         <dt class="col-sm-2">
                             @Html.DisplayNameFor(model => model.DanhMuc)
@@ -41,7 +41,7 @@
                     </dl>
                     
                     <div>
-                        <a asp-action="Edit" asp-route-id="@Model.ChiTieuId" class="btn btn-primary">Chỉnh sửa</a> |
+                        <a asp-action="Edit" asp-route-id="@Model.ThuNhapId" class="btn btn-primary">Chỉnh sửa</a> |
                         <a asp-action="Index" class="btn btn-secondary">Quay lại danh sách</a>
                     </div>
                 </div>
